@@ -1,4 +1,4 @@
-# $Id: AUTHORS,v 1.3 2004/07/14 14:58:03 jaco Exp $
+# $Id: AUTHORS,v 1.4 2005/01/15 16:28:34 tom_kelly33 Exp $
 
-Jaco Greeff <jaco@linuxminicd.org>
+Jaco Greeff <jaco@puxedo.org>
 Tom Kelly <tom_kelly33@yahoo.com>
