@@ -1,3 +1,10 @@
-# $Id: CREDITS,v 1.2 2003/11/30 16:36:45 jaco Exp $
+# $Id: CREDITS,v 1.3 2005/01/15 16:28:34 tom_kelly33 Exp $
 
 Mat Lechner <mail@matlechner.de>, Logo design
+
+Language Translators
+	Italian  # Thanks to Pietro Cesana
+        German   # Thanks to Dieter Schutze
+        French   # Thanks to Pierre Laloum
+        Turkish  # Thanks to Emre Sokullu
+	Vietnamese # Thanks to Larry Nguyen
