@@ -2,8 +2,8 @@
 #
 # LiveCD install script language strings
 #
-# Copyright (C) 2004, Jaco Greeff <jaco@linuxminicd.org>
-# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
+# Copyright (C) 2004, Jaco Greeff <jaco@puxedo.org>
+# Copyright (C) 2004-2005, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.87 2005/01/15 16:28:34 tom_kelly33 Exp $
 #
 
 package fMain;
@@ -240,7 +240,7 @@ sub getStr {
 }
 # Form implementation generated from reading ui file 'livecd-install.ui'
 #
-# Created: Fri Dec 31 15:31:36 2004
+# Created: Sat Jan 15 00:54:34 2005
 #      by: The PerlQt User Interface Compiler (puic)
 #
 # WARNING! All changes made in this file will be lost!
@@ -3817,7 +3817,8 @@ sub languageChange
 
 #
 # LiveCD-Install script
-# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@puxedo.org>
+# Copyright (C) 2004-2005, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -3835,7 +3836,7 @@ sub languageChange
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.87 2005/01/15 16:28:34 tom_kelly33 Exp $
 #
 
 #use LCDLang;
@@ -4611,6 +4612,7 @@ sub showBootloader
 
 	this->setBackEnabled($page, 0);
 	this->lbBootloader->clear();
+	this->lbBootloader->insertItem("--"." Do not install");
 	this->lbBootloader->insertItem("$rootpart ".getStr('boot_bs'));
 
 	my @drives = ();
@@ -4628,7 +4630,7 @@ sub showBootloader
 	    }
 	}
 	this->lbBootloader->insertItem("$_ ".getStr('boot_mbr')) foreach (@drives);
-	this->lbBootloader->setCurrentItem(1);
+	this->lbBootloader->setCurrentItem(0);
     }
 }
 
@@ -4644,8 +4646,7 @@ sub doLoaderInstall # SLOT: ( )
 		chomp($distro);
 
 		my $bootstr = lbBootloader->selectedItem()->text();
-		my ($bdev, $text) = split(/ /, $bootstr);
-		$bootdev = $bdev;
+		my ($bootdev, $text) = split(/ /, $bootstr);
 
 		my $kbdmap = "$mnt/usr/lib/kbd/keymaps/livecd.map";
 		do_system("mkdir -p $mnt/usr/lib/kbd/keymaps ; dumpkeys >$kbdmap");
@@ -4653,6 +4654,7 @@ sub doLoaderInstall # SLOT: ( )
 		
 		do_system("mkdir -p $mnt/etc");
 		do_system("cp $mnt/etc/lilo.conf $mnt/etc/lilo.conf.old");
+
 		open LILO, '>', "$mnt/etc/lilo.conf";
 		print LILO "boot=$bootdev
 map=/boot/map
@@ -4738,6 +4740,7 @@ label=\"$label\"
 		} else {
 			do_system("mount -t devfs none $mnt/dev"); # Mount for devfs
 		}
+		return if ($bootdev eq "--");
 		do_system2("/sbin/lilo -v -r $mnt");
 		do_system("umount $mnt/dev");
 		do_system("umount $mnt/proc");
@@ -5046,8 +5049,8 @@ sub cbLanguage_act # SLOT: ( const QString & )
 #
 # LiveCD-Install script
 #
-# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
-# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@puxedo.org>
+# Copyright (C) 2004-2005, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -5065,7 +5068,7 @@ sub cbLanguage_act # SLOT: ( const QString & )
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install,v 1.86 2004/12/31 21:37:49 tom_kelly33 Exp $
+# $Id: livecd-install,v 1.87 2005/01/15 16:28:34 tom_kelly33 Exp $
 #
 
 package main;
