@@ -1,8 +1,8 @@
 #
 # LiveCD install script language strings
 #
-# Copyright (C) 2004, Jaco Greeff <jaco@linuxminicd.org>
-# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
+# Copyright (C) 2004, Jaco Greeff <jaco@puxedo.org>
+# Copyright (C) 2004-2005, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -20,7 +20,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install-lang.pm.in,v 1.19 2004/10/12 19:57:30 tom_kelly33 Exp $
+# $Id: livecd-install-lang.pm.in,v 1.20 2005/01/15 16:28:34 tom_kelly33 Exp $
 #
 
 package fMain;
