@@ -2,8 +2,8 @@
 #
 # LiveCD-Install script
 #
-# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
-# Copyright (C) 2004, Tom Kelly  <tom_kelly33@yahoo.com>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@puxedo.org>
+# Copyright (C) 2004-2005, Tom Kelly  <tom_kelly33@yahoo.com>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install.pl.in,v 1.4 2004/07/14 14:58:03 jaco Exp $
+# $Id: livecd-install.pl.in,v 1.5 2005/01/15 16:28:34 tom_kelly33 Exp $
 #
 
 package main;
